--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        style="?android:attr/progressBarStyleHorizontal"/>
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,7 +94,7 @@
 
                             <TextView
                                 android:id="@+id/lbSaveAmount"
-                                android:layout_weight="1"
+                                android:layout_weight="3"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:paddingStart="5dp"
